# sfs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml  docker-release.yml
deploy/: Caddyfile  nginx.conf
docker/: entrypoint.sh
docs/: README.md  api.md  architecture.md  checkpoints.md  config.md  data-model.md  deployment.md  security.md  ui.md
docs/checkpoints/: 00-bootstrap.md  01-config-logging.md  02-db-sessions.md  03-templates-ui.md  04-auth-login-logout.md  05-upload.md  06-file-details-code-lookup.md  07-direct-link.md  08-settings-admin.md  09-cleanup-job.md  10-rate-limiting-hardening.md  11-docker-deploy.md  12-qa-tests.md  README.md
docs/plan/: preview_and_copy.md
sql/: schema.sql
src/: app_state.rs  auth.rs  cleanup.rs  config.rs  csrf.rs  database.rs  direct_links.rs  files.rs  logging.rs  main.rs  rate_limit.rs  sessions.rs  settings.rs  templates.rs  users.rs
src/server/: constants.rs  mod.rs  router.rs  utils.rs
src/server/handlers/: admin.rs  auth.rs  downloads.rs  files.rs  home.rs  mod.rs  paste.rs  settings.rs  shared.rs  uploads.rs
templates/: base.html  direct_link_error.html  direct_link_snippet.html  file.html  home.html  login.html  paste.html  register.html  settings.html  upload.html  users.html
