[package]
name = "simple_file_server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["http2", "macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "limit"] }
tower_governor = "0.1"
tower-sessions = "0.11"
tower-sessions-sqlx-store = { version = "0.11", features = ["sqlite"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "sqlite"] }

# Templates
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Authentication
argon2 = "0.5"
subtle = "2.5"
fastrand = "2.0"
governor = { version = "0.6", features = ["dashmap"] }

# IDs and codes
ulid = "1.1"
nanoid = "0.4"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Time handling
time = "0.3"

# MIME type detection
mime_guess = "2.0"
sha2 = "0.10"
base64 = "0.22"
base64ct = { version = "1.7.1", default-features = false }
hmac = "0.12"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tokio-test = "0.4"